# fgdconv

./: .gitignore  .python-version  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  LICENSE.txt  LICENSE_JPGOV2.0.txt  LICENSE_JPGOV2.0_ja.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_test.sh  setup.cfg  setup.py  tox.ini
ci/travis/: before_install.sh  install.sh  script.sh
docs/: INSTALL.rst  LIMITATIONS.rst  conf.py  development.rst  index.rst  installation.rst  limitation.rst
fgdconv/: __init__.py  cli.py  fgd2gml.py  fgd2ogr.py  fgdschema.py  ogr2ogr.py  ogrconv.py  utils.py
fgdconv/sax/: fgd2gml_handler.py  (+1 more)
jpgis-converter/: jpgisgml2gml.py
jpgisgml2gml/: __init__.py  cli.py  fgd2gml.py  fgdschema.py  jgd2k2wgs84.py  jpgisgml2gml.py  ogrconv.py  schema.py
test/: BldA.xml  RdCompt.xml  test_jpgisgml2gml.py
test_deps/: GDAL-2.1.3-cp27-cp27m-win32.whl  GDAL-2.1.3-cp27-cp27m-win_amd64.whl  GDAL-2.1.3-cp35-cp35m-win32.whl  GDAL-2.1.3-cp35-cp35m-win_amd64.whl  GDAL-2.1.3-cp36-cp36m-win32.whl  GDAL-2.1.3-cp36-cp36m-win_amd64.whl  lxml-3.7.3-cp27-cp27m-win32.whl  lxml-3.7.3-cp27-cp27m-win_amd64.whl  lxml-3.7.3-cp35-cp35m-win32.whl  lxml-3.7.3-cp35-cp35m-win_amd64.whl  lxml-3.7.3-cp36-cp36m-win32.whl  lxml-3.7.3-cp36-cp36m-win_amd64.whl
tests/: BldA.gfs  BldA.xml  BldA84_test.gml  BldA84_test.xsd  expected.xml  test_cli.py  test_fgd2gml_handler.py  test_fgd2ogr.py  test_fgdconv.py  test_fgdschema.py  test_jgd2k2wgs84.py  test_jpgisgml2gml.py  test_ogr2ogr.py  test_ogrconv.py  xmlutil.py
(+5 files in other folders)
