[bdist_wheel]
universal=1

[build_sphinx]
source-dir = docs
build-dir  = build/docs
all_files  = 1

[flake8]
max-line-length = 125

[metadata]
name = fgdconv
version = 0.3.0
description = FGD GML v4 converter.
author = Hiroshi Miura
author_email = miurahr@linux.com
license = MIT
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
keywords = FGD GIS GML geospatial KIBAN
url = https://github.com/miurahr/fgdconv
classifiers =
        Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Education
        Intended Audience :: Science/Research
        Topic :: Scientific/Engineering
        Topic :: Text Processing
        Topic :: Utilities
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6'

[options]
python_requires = >= 3.6
install_requires =
      lxml
#     pygdal
setup_requires =
      setuptools>=45.0
packages = fgdconv

[options.entry_points]
console_scripts =
    fgdconv = fgdconv.fgd2ogr:main

[options.package_data]
* = sax/data/FGD_GMLSchema.xsd

[options.extras_require]
test =
      nose
      tox
check=
      check-manifest
      flake8
      flake8-black
      flake8-deprecated
      isort>=5.0.3
